--- a/assets/base.css
+++ b/assets/base.css
@@ -18,7 +18,7 @@
   --pink: #e64980;
   --purple: #f81ce5;
   --blue: #0070f3;
-  --violet: #5f3dc4;
+  --violet: #edbbd8;
   --violet-light: #7048e8;
   --accents-0: #f8f9fa;
   --accents-1: #f1f3f5;
@@ -30,11 +30,11 @@
   --accents-7: #495057;
   --accents-8: #343a40;
   --accents-9: #212529;
-  --font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue',
-    'Helvetica', sans-serif;
+  --font-sans: -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue",
+    "Helvetica", sans-serif;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --primary: #000000;
   --primary-2: #111;
   --secondary: #ffffff;
@@ -70,7 +70,7 @@ html {
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
-  font-feature-settings: 'case' 1, 'rlig' 1, 'calt' 0;
+  font-feature-settings: "case" 1, "rlig" 1, "calt" 0;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -102,7 +102,9 @@ a {
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-
+.textured {
+  background-image: url(/whitenoise.png);
+}
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
@@ -127,4 +129,3 @@ a {
     opacity: 1;
   }
 }
-
