--- a/components/common/Navbar/Navbar.module.css
+++ b/components/common/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
 }
 
 .linkWrapper {
-  display: inline-block;
+  display: inline-block !important;
   position: absolute;
   width: 80px;
   height: 90px;
