--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -9,55 +9,11 @@
       transform: scale(0.98);
     }
 
-    & .productImage {
-      transform: scale(1.2625);
-    }
-
     & .productTitle > span,
     & .productPrice,
     & .wishlistButton {
-      @apply bg-secondary text-secondary;
+      @apply bg-purple text-secondary;
     }
-
-    &:nth-child(6n + 1) .productTitle > span,
-    &:nth-child(6n + 1) .productPrice,
-    &:nth-child(6n + 1) .wishlistButton {
-      @apply bg-violet text-white;
-    }
-
-    &:nth-child(6n + 5) .productTitle > span,
-    &:nth-child(6n + 5) .productPrice,
-    &:nth-child(6n + 5) .wishlistButton {
-      @apply bg-blue text-white;
-    }
-
-    &:nth-child(6n + 3) .productTitle > span,
-    &:nth-child(6n + 3) .productPrice,
-    &:nth-child(6n + 3) .wishlistButton {
-      @apply bg-pink text-white;
-    }
-
-    &:nth-child(6n + 6) .productTitle > span,
-    &:nth-child(6n + 6) .productPrice,
-    &:nth-child(6n + 6) .wishlistButton {
-      @apply bg-cyan text-white;
-    }
-  }
-
-  &:nth-child(6n + 1) .squareBg {
-    @apply bg-violet;
-  }
-
-  &:nth-child(6n + 5) .squareBg {
-    @apply bg-blue;
-  }
-
-  &:nth-child(6n + 3) .squareBg {
-    @apply bg-pink;
-  }
-
-  &:nth-child(6n + 6) .squareBg {
-    @apply bg-cyan;
   }
 }
 
