--- a/assets/base.css
+++ b/assets/base.css
@@ -171,6 +171,31 @@ a {
   background-size: 20px 20px;
   background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 }
+.checked-large {
+  background-image: linear-gradient(45deg, #38559c 25%, transparent 25%),
+    linear-gradient(-45deg, #38559c 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #38559c 75%),
+    linear-gradient(-45deg, transparent 75%, #38559c 75%);
+  background-size: 160px 160px;
+  background-position: 0 0, 0 80px, 80px -80px, -80px 0px;
+}
+.checked-xlarge {
+  background-image: linear-gradient(45deg, #38559c 25%, transparent 25%),
+    linear-gradient(-45deg, #38559c 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #38559c 75%),
+    linear-gradient(-45deg, transparent 75%, #38559c 75%);
+  background-size: 320px 320px;
+  background-position: 0 0, 0 160px, 160px -160px, -160px 0px;
+}
+.overlay {
+  outline: 300px solid var(--violet) !important;
+  opacity: 0.5;
+  /* outline-offset: -300px;q */
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
 
 @-webkit-keyframes fadeIn {
   from {
