--- a/assets/base.css
+++ b/assets/base.css
@@ -192,7 +192,7 @@ a {
   opacity: 0.5;
   /* outline-offset: -300px;q */
   overflow: hidden;
-  position: relative;
+  /* position: relative; */
   height: 100%;
   width: 100%;
 }
