--- a/components/ui/Marquee/Marquee.module.css
+++ b/components/ui/Marquee/Marquee.module.css
@@ -1,6 +1,5 @@
 .root {
   @apply w-full relative;
-  height: 320px;
   min-width: 100%;
 }
 
@@ -9,8 +8,7 @@
 }
 
 .container > * {
-  @apply relative flex-1 px-16 py-4 h-full;
-  min-height: 320px;
+  @apply relative flex-1 px-16 py-4;
 }
 
 .primary {
