--- a/components/common/Accordion/Accordion.module.css
+++ b/components/common/Accordion/Accordion.module.css
@@ -31,7 +31,13 @@
   margin-top: -2px;
   background-color: #372717;
   overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
 }
+.panel__label::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
 .panel__label:before {
   transform: rotate(-90deg);
   transition: transform 0.35s cubic-bezier(0.65, 0.05, 0.36, 1);
