--- a/components/common/FeatureBar/FeatureBar.module.css
+++ b/components/common/FeatureBar/FeatureBar.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply text-center p-6 bg-primary text-sm flex-row justify-center items-center font-medium fixed bottom-0 w-full z-10 transition-all duration-300 ease-out;
+  @apply text-center p-6 bg-primary text-sm flex-row justify-center items-center font-medium fixed bottom-0 w-full transition-all duration-300 ease-out;
   z-index: 1000;
   @screen md {
     @apply flex text-left;
